--- a/008_iOS_study/008_iOS_study/view/SecondViewController.xib
+++ b/008_iOS_study/008_iOS_study/view/SecondViewController.xib
@@ -8,44 +8,42 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondViewController" customModule="_08_iOS_study" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="rHw-o0-MPe" id="SCp-X7-2SL"/>
+                <outlet property="view" destination="bw0-Ch-tqi" id="5lO-kl-u5N"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="83T-C0-e4G" customClass="SecondViewController" customModule="_08_iOS_study" customModuleProvider="target">
-            <view key="view" contentMode="scaleToFill" id="rHw-o0-MPe">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tog-O1-sC0">
-                        <rect key="frame" x="184" y="433" width="46" height="30"/>
-                        <color key="backgroundColor" systemColor="systemTealColor"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Button"/>
-                        <connections>
-                            <action selector="touchUpInsideButton:" destination="83T-C0-e4G" eventType="touchUpInside" id="8Mb-K9-jz4"/>
-                        </connections>
-                    </button>
-                </subviews>
-                <viewLayoutGuide key="safeArea" id="Bq8-bu-bQt"/>
-                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                <constraints>
-                    <constraint firstItem="Tog-O1-sC0" firstAttribute="centerX" secondItem="rHw-o0-MPe" secondAttribute="centerX" id="Bpe-OD-trB"/>
-                    <constraint firstItem="Tog-O1-sC0" firstAttribute="centerY" secondItem="rHw-o0-MPe" secondAttribute="centerY" id="cYb-LR-VP1"/>
-                </constraints>
-            </view>
-            <point key="canvasLocation" x="72" y="40"/>
-        </viewController>
+        <view contentMode="scaleToFill" id="bw0-Ch-tqi">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I2O-uR-Wy5">
+                    <rect key="frame" x="184" y="433" width="46" height="30"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="touchUpInsideButton:" destination="-1" eventType="touchUpInside" id="K9y-7Z-Psh"/>
+                    </connections>
+                </button>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="LVA-CS-qjR"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="I2O-uR-Wy5" firstAttribute="centerY" secondItem="bw0-Ch-tqi" secondAttribute="centerY" id="aDi-xh-khQ"/>
+                <constraint firstItem="I2O-uR-Wy5" firstAttribute="centerX" secondItem="bw0-Ch-tqi" secondAttribute="centerX" id="mig-UN-k4l"/>
+            </constraints>
+            <point key="canvasLocation" x="309" y="11"/>
+        </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
